--- a/about.html
+++ b/about.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="/images/icon-192x192.png">
     <title>About page</title>
 
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
     <link rel="manifest" href="manifest.json">
-    <meta name="them-color" content="#3544f6">
+    <meta name="theme-color" content="#3544f6"/>
+
 
   </head>
   
