--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" href="/images/icon-192x192.png">
+    <link rel="shortcut icon" href="/images/icon-192x192.png" type="image/x-icon">
     <title>Home page</title>
 
     <link rel="stylesheet" href="css/bootstrap.css" />
